@@ -3,12 +3,14 @@ extends =
     cfgs/versions.cfg
     cfgs/munin.cfg
 
-parts =
+base-parts =
     env
+    grp
+    ssh
+    ssh-directory
+    aws
     zeo
     backup
-    backup-cronjob
-    zeopack-crontab
     instance1
     instance2
     instance-debug
@@ -20,9 +22,17 @@ parts =
     nginx-conf
     supervisor
     supervisor-conf
-    supervisor-crontab
     logrotate
+
+cron-parts = 
+    backup-cronjob
+    zeopack-crontab
+    supervisor-crontab
     logrotate-crontab
+
+parts =
+    ${buildout:base-parts}
+    ${buildout:cron-parts}
     ${buildout:munin-parts}
 
 allow-picked-versions = false
@@ -40,6 +50,31 @@ recipe = gocept.recipe.env
 
 [grp]
 recipe = collective.recipe.grp
+
+[ssh]
+recipe = collective.recipe.template
+input = ${buildout:directory}/etc/deployment/authorized_keys
+output = ${buildout:directory}/.ssh/authorized_keys
+mode = 644
+
+[ssh-directory]
+recipe = plone.recipe.command
+command = chmod 700 ${buildout:directory}/.ssh/
+update-command = ${ssh-directory:command}
+
+[aws]
+recipe = zc.recipe.egg
+eggs =
+    mr.awsome
+entry-points =
+    aws=mr.awsome:aws
+    assh=mr.awsome:aws_ssh
+initialization =
+    import warnings
+    warnings.filterwarnings("ignore", ".*", DeprecationWarning, "Crypto\.Hash\.MD5", 6)
+    warnings.filterwarnings("ignore", ".*", DeprecationWarning, "Crypto\.Hash\.SHA", 6)
+    warnings.filterwarnings("ignore", ".*", DeprecationWarning, "Crypto\.Util\.randpool", 40)
+arguments = configpath="${buildout:directory}/etc/deployment"
 
 [zeo]
 recipe = plone.recipe.zeoserver
