@@ -17,16 +17,20 @@ z3c.autoinclude = 0.3.3
 zope.globalrequest = 1.0
 
 # Buildout / server infrastructure
+boto = 1.9b
 buildout.extensionscripts = 1.0
 collective.recipe.grp = 0.1
 distribute = 0.6.14
 experimental.catalogqueryplan = 3.0.2
+Fabric = 0.9.0
 gocept.recipe.env = 1.0
 hexagonit.recipe.download = 1.4.1
+mr.awsome = 0.8
 mr.developer = 1.16
 plone.recipe.command = 1.1
 plone.recipe.haproxy = 1.1.1
 plone.recipe.varnish = 1.1
+pycrypto = 2.1.0
 collective.recipe.backup = 1.6
 collective.recipe.omelette = 0.10
 collective.recipe.template = 1.8
