@@ -1,0 +1,5 @@
+[buildout]
+extends = buildout.cfg
+
+parts =
+    ${buildout:base-parts}
