@@ -1,0 +1,28 @@
+#
+# Gocept servers
+#
+
+[macro:base-server]
+user = jarn
+fabfile = fabfile.py
+
+
+[server:dev]
+<= macro:base-server
+host = jarn00.gocept.net
+fingerprint = 00:6f:32:04:ec:dc:10:27:e5:0f:e7:0d:e2:45:62:12
+
+[server:demo]
+<= macro:base-server
+host = jarn01.gocept.net
+fingerprint = b1:13:f6:77:66:6f:32:2f:7f:e4:c4:d9:4a:01:ed:d4
+
+[server:wke]
+<= macro:base-server
+host = jarn02.gocept.net
+fingerprint = 30:5f:ed:82:a3:72:74:15:a6:16:3e:ac:6f:df:36:8b
+
+[server:set]
+<= macro:base-server
+host = jarn03.gocept.net
+fingerprint = 42:0a:4d:3d:85:7c:d3:a8:b6:c8:63:e8:c3:07:2a:91
